Added EF core, migrations, a data generator and fixed some tests

--- a/PeopleSearch/PeopleSearch/appsettings.json
+++ b/PeopleSearch/PeopleSearch/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "PeopleSearch": "Server=(localdb)\\mssqllocaldb;Database=pauls-people-search;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
-  },
-  "AllowedHosts": "*"
 }
