--- a/PeopleSearch/PeopleSearch/appsettings.json
+++ b/PeopleSearch/PeopleSearch/appsettings.json
@@ -7,5 +7,8 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "PeopleSearch": "Server=(localdb)\\mssqllocaldb;Database=pauls-people-search;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "PeopleSearchSettings": {
+        "DataGeneratorPersonSeedCount": 10000
     }
 }
