--- a/PeopleSearch/PeopleSearch/PeopleSearch.csproj
+++ b/PeopleSearch/PeopleSearch/PeopleSearch.csproj
@@ -25,6 +25,11 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20190319043423_SeedData.cs" />
+    <Compile Remove="Migrations\20190319043423_SeedData.Designer.cs" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
